# Charcuterie

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  TODO.md
benchmark/: CMakeLists.txt
benchmark/src/: benchmark.cpp
cc/: main.cpp
milk/asset/: CMakeLists.txt
milk/asset/include/asset/import/raw/: Gltf.h
milk/asset/interface/asset/definition/: MeshDefinition.h  TemplateDefinition.h
milk/asset/interface/asset/export/raw/: IPpm.h
milk/asset/interface/asset/import/builder/: ITemplateAssetBuilder.h
milk/asset/interface/asset/util/: IUuid.h
milk/asset/src/export/raw/: Ppm.cpp
milk/asset/src/import/builder/: TemplateAssetBuilder.cpp
milk/asset/src/import/raw/: Gltf.cpp
milk/asset/src/import/util/: Uuid.cpp
milk/asset/test/export/raw/: PpmTest.cpp
milk/core/: CMakeLists.txt
milk/core/include/core/: Memory.h  WindowsFileHandle.h  WindowsResult.h
milk/core/include/core/concurrency/: IWordLock.h
milk/core/include/core/log/: AnsiColor.h  Log.h
milk/core/interface/core/: IAppContext.h  IAssert.h  IAtomic.h  IEnum.h  IHash.h  IMacro.h  IMath.h  IMemory.h  IResult.h  ISharedPtr.h  ITraits.h  IType.h  IUniquePtr.h  IWindows.h
milk/core/interface/core/concurrency/: ICondition.h  ICondition.inl  ILockTraits.h  IParkingLot.h  IPause.h  IScopedLock.h  ISharedMutex.h  ISync.h
milk/core/interface/core/concurrency/jobsystem/: IJob.h  IJobInstance.h  IJobPriority.h  IJobQueue.h  IJobQueue.inl  IJobSystem.h  IJobSystem.inl  IWaitGroup.h
milk/core/interface/core/container/: IFixedSizeObjectPool.h  ILockFreeObjectPool.h  IString.h  IString.inl  IVector.h
milk/core/interface/core/filesystem/: IFile.h  IPath.h
milk/core/interface/core/fwd/: IMemoryFwd.h  ISharedPtrFwd.h  IStringFwd.h  IUniquePtrFwd.h  IVectorFwd.h
milk/core/interface/core/io/: IBufferedWriter.h
milk/core/interface/core/log/: IFormatter.h  ILog.h  ILogCategory.h  ILogLevel.h  IRawLog.h  ISink.h
milk/core/interface/core/math/: IMlm.h  IMlm.inl  glm.h
milk/core/interface/core/util/: IClock.h  IPasskey.h
milk/core/src/concurrency/: ParkingLot.cpp  SharedMutex.cpp  WordLock.cpp
milk/core/src/concurrency/jobsystem/: JobSystem.cpp  WaitGroup.cpp
milk/core/src/container/: StringView.cpp
milk/core/src/filesystem/: File.cpp  Path.cpp  WindowsFileHandle.cpp
milk/core/src/io/: BufferedWriter.cpp
milk/core/src/log/: AnsiColor.cpp  Formatter.cpp  Log.cpp  Sink.cpp
milk/core/src/math/: Mlm.cpp
milk/core/src/memory/: Memory.cpp
milk/core/src/util/: Clock.cpp
milk/core/test/: MemoryTest.cpp
milk/core/test/concurrency/: ConditionTest.cpp  JobQueueTest.cpp  JobSystemTest.cpp  ParkingLotTest.cpp  SharedMutexTest.cpp  WaitGroupTest.cpp  WordLockTest.cpp
milk/core/test/container/: FixedSizeObjectPoolTest.cpp  LockFreeObjectPoolTest.cpp  StringTest.cpp  VectorTest.cpp
milk/core/test/filesystem/: FileTest.cpp  PathTest.cpp
milk/core/test/io/: BufferedWriterTest.cpp
milk/core/test/log/: LogTest.cpp
milk/core/test/math/: MlmTest.cpp
milk/render/: CMakeLists.txt
milk/render/interface/render/: rhi.h
milk/test/: CMakeLists.txt
milk/test/interface/test/: ITest.h
scripts/: cc.py  cmake.py  util.py
swiss/: CMakeLists.txt  main.cpp
swiss/include/swiss/: PathTracer.h
swiss/include/swiss/render/: Camera.h
swiss/src/: PathTracer.cpp
swiss/src/render/: Camera.cpp
